--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18n-iso-countries": "^7.14.0",
     "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -31,6 +32,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
