--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "gsap": "^3.13.0",
     "i18n-iso-countries": "^7.14.0",
     "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.542.0",
